# SwiftSDK

cpp/include/swiftauth/: swiftauth.hpp
cpp/src/: swiftauth.cpp
csharp/: SwiftAuth.sln
csharp/Example/: Example.csproj  Program.cs
csharp/SwiftAuth/: SwiftAuthClient.cs
go/: swiftauth.go
java/: pom.xml
java/src/main/java/net/swiftauth/: SwiftAuthClient.java  SwiftAuthException.java
kotlin/: build.gradle.kts
kotlin/example/: App.kt
kotlin/src/main/kotlin/net/swiftauth/: SwiftAuthClient.kt
lua/swiftauth/: init.lua
nodejs/src/: index.js
php/example/: app.php
php/src/: SwiftAuthClient.php
python/example/: app.py
python/swiftauth/: client.py  models.py
ruby/lib/: swiftauth.rb
rust/example/: app.rs
rust/src/: lib.rs
sdks/: README.md
sdks/cpp/: CMakeLists.txt  Example.vcxproj  SwiftAuth.sln  SwiftAuth.vcxproj
sdks/cpp/example/: main.cpp
sdks/cpp/include/swiftauth/: swiftauth.hpp
sdks/cpp/src/: swiftauth.cpp
sdks/csharp/SwiftAuth/: SwiftAuth.csproj
sdks/go/: go.mod  go.sum  swiftauth.go
sdks/go/example/: main.go
sdks/java/example/: ExampleApp.java
sdks/lua/example/: app.lua
sdks/lua/swiftauth/: init.lua
sdks/nodejs/: package-lock.json  package.json
sdks/nodejs/example/: app.js
sdks/nodejs/src/: index.js
sdks/php/: composer.json
sdks/python/: setup.py
sdks/python/swiftauth/: __init__.py  client.py  models.py
sdks/ruby/: swiftauth.gemspec
sdks/ruby/example/: app.rb
sdks/rust/: Cargo.toml
sdks/swift/example/: main.swift
swift/: Package.swift
swift/Sources/SwiftAuth/: SwiftAuthClient.swift
(+2 files in other folders)
