[package]
name = "swiftauth"
version = "1.0.0"
edition = "2021"
description = "Official SwiftAuth SDK for Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
flate2 = "1"
hex = "0.4"
hostname = "0.4"
tungstenite = "0.24"
url = "2"

[[example]]
name = "app"
path = "example/app.rs"
